--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "e2e": "yarn e2e:ios && yarn e2e:android"
   },
   "dependencies": {
+    "@edgeware/node-types": "^3.3.4",
     "@eva-design/eva": "^2.0.0",
     "@polkadot/api": "4.4.1",
     "@polkadot/metadata": "4.4.1",
@@ -45,8 +46,8 @@
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-native-community/netinfo": "^5.9.3",
-    "@react-navigation/native": "^5.7.1",
-    "@react-navigation/stack": "^5.7.1",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.10.0",
     "bignumber.js": "^9.0.0",
     "hoist-non-react-statics": "^3.3.0",
     "jest-circus": "26.5.2",
