Set up AddressBookContext, set up recipient and tx sending button

--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
     "@edgeware/node-types": "^3.3.4",
     "@eva-design/eva": "^2.0.0",
     "@polkadot/api": "4.4.1",
+    "@polkadot/keyring": "^6.1.1",
     "@polkadot/metadata": "4.4.1",
     "@polkadot/reactnative-identicon": "0.53.1",
-    "@polkadot/util": "6.0.5",
-    "@polkadot/util-crypto": "6.0.5",
+    "@polkadot/util": "6.1.1",
+    "@polkadot/util-crypto": "6.1.1",
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.6",
