--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-native": "0.63.4",
-    "react-native-camera": "^3.21.0",
+    "react-native-camera": "3.35.0",
     "react-native-dropdown-picker": "^4.0.9",
     "react-native-elements": "^1.2.6",
     "react-native-flash-message": "^0.1.23",
